# oh-my-pi

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
crates/brush-core-vendored/src/: commands.rs  interp.rs  lib.rs  processes.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  grep.rs  highlight.rs  html.rs  image.rs  lib.rs  shell.rs  summary.rs  text.rs
crates/pi-natives/src/chunk/: edit.rs  indent.rs  mod.rs  render.rs  resolve.rs  state.rs  types.rs
crates/pi-natives/src/shell/: minimizer.rs
crates/pi-natives/src/shell/minimizer/: engine.rs  markers.rs  plan.rs
docs/: approval-mode.md  environment-variables.md  models.md  remote-inference-slot-management.md  task-agent-discovery.md
docs/tools/: debug.md  github.md  read.md
scripts/: rate-edit-tool.py
src/robomp/: queue.py
tests/: test_queue_shutdown.py
